outputs_20260408-010853-2127533d/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:12:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\include/gtm_tom_3_phase_inverter_pwm.h:33:6: error: expected identifier or '(' before 'for'
   33 | void for(void);
      |      ^~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:44:25: error: 'IfxGtm_TOM1_0_TOUT0_P02_0_OUT' undeclared (first use in this function)
   44 | #define PHASE_U_HS    (&IfxGtm_TOM1_0_TOUT0_P02_0_OUT)   /* U High-Side:  P02.0 TOM1.CH0 */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:96:61: note: in expansion of macro 'PHASE_U_HS'
   96 |     output[0].pin                   = (IfxGtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:44:25: note: each undeclared identifier is reported only once for each function it appears in
   44 | #define PHASE_U_HS    (&IfxGtm_TOM1_0_TOUT0_P02_0_OUT)   /* U High-Side:  P02.0 TOM1.CH0 */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:96:61: note: in expansion of macro 'PHASE_U_HS'
   96 |     output[0].pin                   = (IfxGtm_Pwm_ToutMap *)PHASE_U_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:45:25: error: 'IfxGtm_TOM1_0N_TOUT7_P02_7_OUT' undeclared (first use in this function)
   45 | #define PHASE_U_LS    (&IfxGtm_TOM1_0N_TOUT7_P02_7_OUT)  /* U Low -Side:  P02.7 TOM1.CH0N */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:97:61: note: in expansion of macro 'PHASE_U_LS'
   97 |     output[0].complementaryPin      = (IfxGtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:46:25: error: 'IfxGtm_TOM1_1_TOUT1_P02_1_OUT' undeclared (first use in this function)
   46 | #define PHASE_V_HS    (&IfxGtm_TOM1_1_TOUT1_P02_1_OUT)   /* V High-Side:  P02.1 TOM1.CH1 */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:104:61: note: in expansion of macro 'PHASE_V_HS'
  104 |     output[1].pin                   = (IfxGtm_Pwm_ToutMap *)PHASE_V_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:47:25: error: 'IfxGtm_TOM1_12_TOUT4_P02_4_OUT' undeclared (first use in this function)
   47 | #define PHASE_V_LS    (&IfxGtm_TOM1_12_TOUT4_P02_4_OUT)  /* V Low -Side:  P02.4 TOM1.CH12 */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:105:61: note: in expansion of macro 'PHASE_V_LS'
  105 |     output[1].complementaryPin      = (IfxGtm_Pwm_ToutMap *)PHASE_V_LS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:48:25: error: 'IfxGtm_TOM1_5_TOUT2_P02_2_OUT' undeclared (first use in this function)
   48 | #define PHASE_W_HS    (&IfxGtm_TOM1_5_TOUT2_P02_2_OUT)   /* W High-Side:  P02.2 TOM1.CH5 */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:112:61: note: in expansion of macro 'PHASE_W_HS'
  112 |     output[2].pin                   = (IfxGtm_Pwm_ToutMap *)PHASE_W_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:49:25: error: 'IfxGtm_TOM1_13_TOUT5_P02_5_OUT' undeclared (first use in this function)
   49 | #define PHASE_W_LS    (&IfxGtm_TOM1_13_TOUT5_P02_5_OUT)  /* W Low -Side:  P02.5 TOM1.CH13 */
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:113:61: note: in expansion of macro 'PHASE_W_LS'
  113 |     output[2].complementaryPin      = (IfxGtm_Pwm_ToutMap *)PHASE_W_LS;
      |                                                             ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c: At top level:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\src\gtm_tom_3_phase_inverter_pwm.c:238:6: error: expected identifier or '(' before 'for'
  238 | void for(void)                   { /* stub for unit-test expectations */ }
      |      ^~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\test\test_gtm_tom_3_phase_inverter_pwm.c:3:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_eael9ynu\include/gtm_tom_3_phase_inverter_pwm.h:33:6: error: expected identifier or '(' before 'for'
   33 | void for(void);
      |      ^~~
